--- a/src/components/shared/styles/globals.css
+++ b/src/components/shared/styles/globals.css
@@ -1,4 +1,4 @@
-/* auto-blog-service/src/components/styles/globals.css */
+/* auto-blog-service\src\components\shared\styles\globals.css */
 /* 전역 스타일: 애플리케이션 전체에 적용되는 기본 스타일 및 유틸리티 클래스를 정의합니다. */
 
 /* 전역 스타일 */
