--- a/src/components/shared/styles/variables.css
+++ b/src/components/shared/styles/variables.css
@@ -1,4 +1,4 @@
-/* auto-blog-service/src/components/styles/variables.css */
+/* auto-blog-service\src\components\shared\styles\variables.css */
 /* CSS 변수 정의: 애플리케이션 전반에 사용되는 색상, 폰트 크기 등 CSS 변수를 정의합니다. */
 
 /* CSS 변수 정의 - 전역 스타일 변수 */
